--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>hello</p>
     <h1>this is the new text </h1>
     <h1>are you happy about this</h1>
-    <p>hello again</p>
+    <p>hello again this is the good way to create a branch</p>
 </body>
 </html>
