--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>this is the new text </h1>
     <h1>are you happy about this</h1>
     <p>hello again</p>
+    <p>not an error fix</p>
 </body>
 </html>
